Update git ingore file

--- a/HorusEngine/HorusEngine.vcxproj
+++ b/HorusEngine/HorusEngine.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>HOR_PLATFORM_WINDOWS;HOR_BUILD_DLL;HOR_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories);$(SolutionDir)HorusEngine\src</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -99,7 +99,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>HOR_PLATFORM_WINDOWS;HOR_BUILD_DLL;HOR_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories);$(SolutionDir)HorusEngine\src</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -123,7 +123,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>HOR_PLATFORM_WINDOWS;HOR_BUILD_DLL;HOR_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;%(AdditionalIncludeDirectories);$(SolutionDir)HorusEngine\src</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -147,6 +147,10 @@
     <ClInclude Include="src\Horus\Application.h" />
     <ClInclude Include="src\Horus\Core.h" />
     <ClInclude Include="src\Horus\EntryPoint.h" />
+    <ClInclude Include="src\Horus\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Horus\Events\Event.h" />
+    <ClInclude Include="src\Horus\Events\KeyEvent.h" />
+    <ClInclude Include="src\Horus\Events\MouseEvent.h" />
     <ClInclude Include="src\Horus\Log.h" />
   </ItemGroup>
   <ItemGroup>
