--- a/src/Utils/Logger/CMakeLists.txt
+++ b/src/Utils/Logger/CMakeLists.txt
@@ -1,11 +1,13 @@
 # src/Utils/Logger/CMakeLists.txt
 
-add_library(Utils_Logger STATIC
-    Logger.h   
+add_library(Horus_Utils_Logger STATIC
     Logger.cpp
+    Logger.h
 )
 
-target_include_directories(Utils_Logger PUBLIC
+target_include_directories(Horus_Utils_Logger PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include/Utils/Logger>
 )
+
+target_link_libraries(Horus_Utils_Logger PUBLIC spdlog::spdlog)
