feat: Establecer base funcional del motor (Horus Engine)
Este commit establece la estructura inicial y la funcionalidad base del motor Horus.
Se han resuelto los problemas críticos de configuración, compilación y enlazado,
proporcionando una plataforma estable para el desarrollo futuro.

Cambios principales:
- Configuración inicial de CMake para la estructura del proyecto multi-librería.
- Integración y configuración correcta de VCPKG para dependencias (GLFW, GLAD, GLM, Spdlog).
- Solución de errores de enlazado (LNK2001, LNK2005) relacionados con Spdlog (transición a header-only).
- Resolución de problemas de codificación de archivos (C4828).
- Corrección de errores de compilación de C++ (ej. atal por critical, problemas de includes de GLFW).
- Implementación de un sistema de logger funcional (Spdlog).
- Establecimiento de la estructura base de la aplicación (clases Application y GameApplication).
- Inicialización correcta de OpenGL/GLAD en el ciclo de vida de la aplicación.
- Demostración de renderizado de un triángulo estático para verificar la pipeline gráfica.

El motor ahora compila, enlaza y ejecuta un programa básico con una ventana GLFW y capacidades de registro.

--- a/src/Core/Application/CMakeLists.txt
+++ b/src/Core/Application/CMakeLists.txt
@@ -11,6 +11,9 @@ target_include_directories(Horus_Core_Application PUBLIC
     $<INSTALL_INTERFACE:include/Core/Application>
 )
 
+target_compile_definitions(Horus_Core_Application PUBLIC SPDLOG_DLL)
+target_link_libraries(Horus_Core_Application PRIVATE spdlog::spdlog)
+
 target_link_libraries(Horus_Core_Application PUBLIC
     glfw
     glad::glad
