SHADER: se agrego parte de la clase de abstraccion de los shaders

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,4 @@
 
 add_subdirectory(Core)
 add_subdirectory(Utils)
-
-# add_subdirectory(Core/ECS)
-# add_subdirectory(Core/Input)
-# add_subdirectory(Core/Time)
-# add_subdirectory(Core/ResourceManager)
-# add_subdirectory(Graphics)
-# add_subdirectory(Graphics/OpenGL)
-# add_subdirectory(Graphics/Components)
+add_subdirectory(Graphics)
